#161 avoid flickering of avatar in chat creation

--- a/src/chatbot/chatbot.css
+++ b/src/chatbot/chatbot.css
@@ -4,7 +4,7 @@
 
     /* 100vh = screen height | 24px = chatbot padding | 52px = chatbot margin | 80px = mobile navigation height*/
     /* 20px spacing */
-    height: calc(100vh - 176px); /* 24 + 52 + 80 + 20 = 176 */
+    height: calc(100vh - 205px); /* 24 + 52 + 80 + 20 = 176 */
 
     margin-left: auto;
     margin-right: auto;
